--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint src",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*": [
+      "yarn lint --fix"
+    ]
   },
   "dependencies": {
+    "eslint": "^7.27.0",
     "next": "10.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -15,6 +23,15 @@
   "devDependencies": {
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "2.3.0",
     "typescript": "^4.2.4"
   }
 }
