--- a/package.json
+++ b/package.json
@@ -6,30 +6,41 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src",
-    "prepare": "husky install"
+    "lint": "eslint src --max-warnings=0",
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "yarn test --watch"
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix"
+      "yarn lint --fix",
+      "yarn test  --findRelatedTests --bail"
     ]
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.23",
     "eslint": "^7.27.0",
     "next": "10.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.31.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
+    "babel-jest": "^26.6.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "2.3.0",
     "typescript": "^4.2.4"
