--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "test:watch": "yarn test --watch",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public"
+    "build-storybook": "build-storybook -s ./public",
+    "generate": "yarn plop --plopfile ./generetors/plopfile.js"
   },
   "lint-staged": {
     "src/**/*": [
@@ -53,6 +54,7 @@
     "jest-dom": "^4.0.0",
     "jest-styled-components": "^7.0.4",
     "lint-staged": "^11.0.0",
+    "plop": "^2.7.4",
     "prettier": "2.3.0",
     "typescript": "^4.2.4"
   }
